Update WordCamp Galicia 2026 schedule styles to reflect new page ID, ensuring correct visibility and content for event dates.

--- a/public-css-gal-2025-NO-USAR.css
+++ b/public-css-gal-2025-NO-USAR.css
@@ -595,29 +595,29 @@ header {
 
 /* Change in 2026: Change page ID to the one used in the site */
 /* Schedule Spanish, change texts */
-.page-id-3218 .wordcamp-schedule__date {
+.page-id-2443 .wordcamp-schedule__date {
 	color: transparent;
 	font-size: 0 !important;
 }
 
 /* Change in 2026: Change page ID to the one used in the site */
-.page-id-3218 .wordcamp-schedule__date::after {
+.page-id-2443 .wordcamp-schedule__date::after {
 	color: var(--wp--preset--color--accent-4);
 	font-size: 48px
 }
 
 /* Change in 2026: Change page ID to the one used in the site */
-.page-id-3218 .wp-block-wordcamp-schedule[data-attributes*="2025-10-03"] .wordcamp-schedule__date::after {
+.page-id-2443 .wp-block-wordcamp-schedule[data-attributes*="2025-10-03"] .wordcamp-schedule__date::after {
 	content: '3 de octubre, 2025';
 }
 
 /* Change in 2026: Change page ID to the one used in the site */
-.page-id-3218 .wp-block-wordcamp-schedule[data-attributes*="2025-10-04"] .wordcamp-schedule__date::after {
+.page-id-2443 .wp-block-wordcamp-schedule[data-attributes*="2025-10-04"] .wordcamp-schedule__date::after {
 	content: '4 de octubre, 2025';
 }
 
 /* Change in 2026: Change page ID to the one used in the site */
-.page-id-3218 .wp-block-wordcamp-schedule[data-attributes*="2025-10-05"] .wordcamp-schedule__date::after {
+.page-id-2443 .wp-block-wordcamp-schedule[data-attributes*="2025-10-05"] .wordcamp-schedule__date::after {
 	content: '5 de octubre, 2025';
 }
 /* css tabla de horario de Programa de Do-action */
